[package]
name = "rspstree"
version = "0.1.0"
authors = ["rrylee <rrylee1994@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["pstree", "rust", "tool"]
repository = "https://github.com/rrylee/rust-pstree"
catagories = ["tool"]
readme = "README.md"
autotests = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
regex = {version = "1.5.4", features = ["pattern"]}
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
